April changes: Added new pages and components for Literature, Nature, and Science sections. Updated routing and main component to include these new pages. Added new images and assets for the new sections. Updated header and footer components for better navigation.

--- a/chuok-frontend/src/app/app.component.html
+++ b/chuok-frontend/src/app/app.component.html
@@ -1,3 +1,8 @@
-<app-header></app-header>
+<ng-container *ngIf="!isSpecialPage(); else headerMain">
+    <app-header></app-header>
+</ng-container>
+<ng-template #headerMain>
+    <app-header-main></app-header-main>
+</ng-template>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
