--- a/chuok-frontend/src/app/components/footer/footer.component.html
+++ b/chuok-frontend/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="footer">
     <div class="footer-social-media">
         <div class="footer-logo-image">
-            <img  src="assets/images/logo-sample.png" alt="Logo">
+            <a routerLink="/main" routerLinkActive="active"><img src="assets/images/chuOK-logo-no-bg.png" alt="chuOK Logo"></a>
         </div>
         <div class="footer-social-media-links">
             <a href="#" target="_blank"><img class="social-media-image" src="assets/images/github-icon.png" alt="Github"></a>
