--- a/chuok-frontend/src/app/pages/main/main.component.html
+++ b/chuok-frontend/src/app/pages/main/main.component.html
@@ -6,10 +6,10 @@
         <p>Welcome to chuOK</p>
     </div>
     <div class="main-content-panel-2">
-        <p>Your one-stop solution for all your needs.</p>
+        <p>Features</p>
     </div>
     <div class="main-content-panel-3">
-        <p>Explore our features and services.</p>
+        <p>Motivational phrase</p>
     </div>
 </main>
 <section class="review-section">
