--- a/chuok-frontend/src/app/components/header/header.component.css
+++ b/chuok-frontend/src/app/components/header/header.component.css
@@ -1,49 +1,27 @@
 .header {
-    display: flex;
     font-size: 24px;
-    height: 100px;
-    /* overflow: hidden; */
-}
-
-.header .nav-bar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 10px;
-    width: 90%;
-}
-
-.header .nav-bar a .logo-picture {
-    width: 30%;
     height: auto;
-    max-height: 100%;
-    max-width: 100%;
 }
 
-.header .nav-list {
+.header .header-container {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
-    padding-right: 10px;
+    width: 100%;
+    height: 100px; /* Explicit height */
+    padding: 10px 0;
+    background-color: #f5f5f5;
+    border-bottom: 1px solid #ccc;
 }
-
-.header .nav-list li {
-    list-style: none;
-    padding: 10px 20px;
-    cursor: pointer;
+  
+.header .logo-container a .logo-picture {
+    height: 60px;      /* Fixed height to prevent overflow */
+    width: auto;
+    max-height: 100%;
+    object-fit: contain;
 }
-
-.header .nav-list li a {
-    color: #292929;
-    text-decoration: none;
-}
-
-.header .nav-list li a:hover {
-    color: #178d13;
-    text-decoration: underline;
-}
-
-.header .profile-picture-container {
+  
+/* .header .profile-picture-container {
     display: flex;
     justify-content: end;
     align-items: center;
@@ -58,12 +36,89 @@
     align-items: center;
     cursor: pointer;
     width: fit-content;
+} */
+
+.nav-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 24px;
+    padding: 0 10px;
+    width: 100%;
 }
 
-.header .profile-picture-container a .profile-picture {
-    width: 30%;
-    height: auto;
-    border-radius: 50%;
-    border: 2px solid rgb(0, 0, 0);
-    padding: 2px;
+.nav-list {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding-right: 10px;
+    width: 90%;
 }
+
+.nav-list li {
+    list-style: none;
+    padding: 10px 20px;
+    cursor: pointer;
+}
+
+.nav-list li a {
+    color: #292929;
+    text-decoration: none;
+}
+
+.home {
+    color: #60705f !important;
+    /* text-decoration: underline !important; */
+    /* border-bottom: 3px solid #60705f; */
+}
+
+#home:hover {
+    color: #60705f;
+}
+
+.literature {
+    color: #931616 !important;
+    /* border-bottom: 3px solid #931616; */
+    /* text-decoration: underline !important; */
+}
+
+#literature:hover {
+    color: #931616;
+}
+
+.science {
+    color: #161c93 !important;
+    /* border-bottom: 3px solid #161c93; */
+    /* text-decoration: underline !important; */
+}
+
+#science:hover {
+    color: #161c93;
+}
+
+.nature {
+    color: #178d13 !important;
+    /* border-bottom: 3px solid #178d13; */
+    /* text-decoration: underline !important; */
+}
+
+#nature:hover {
+    color: #178d13;
+}
+
+a .profile-picture {
+    margin-right: 25px;
+    height: 60px;      /* Fixed height to prevent overflow */
+    width: auto;
+    max-height: 100%;
+    object-fit: contain;
+}
+
+
+/* 
+- 3-line button the user clicks on to show the menu
+- When the menu is open, the button should be replaced with an "X" icon
+- The menu should be a horizontal list of links that can be clicked to navigate to different pages
+- The menu should be hidden by default and only shown when the button is clicked
+- The menu should be responsive and adapt to different screen sizes
+*/
