--- a/chuok-frontend/src/app/components/header/header.component.html
+++ b/chuok-frontend/src/app/components/header/header.component.html
@@ -1,23 +1,39 @@
 <header class="header">
-    <nav class="nav-bar">
+    <!-- The header contains the logo and the profile picture, both of which are links to different pages in the application -->
+    <div class="header-container">
         <!-- The logo is a link to the home page -->
-        <a routerLink="/main" routerLinkActive="active"><img class="logo-picture" src="assets/images/logo-sample.png"></a>
-        <!-- The navigation links are wrapped in a list for better styling and accessibility -->
-        <!-- Each link is a routerLink that navigates to a different route in the application -->
-        <ul class="nav-list">
-            <li class="nav-item">
-                <a routerLink="/home" routerLinkActive="active">Home</a>
-            </li>
-            <li class="nav-item">
-                <a routerLink="/about" routerLinkActive="active">About</a>
-            </li>
-            <li class="nav-item">
-                <a routerLink="/contact" routerLinkActive="active">Contact</a>
-            </li>
-        </ul>
-    </nav>
-    <div class="profile-picture-container">
-        <!-- The profile picture is a link to the profile page -->
-        <a routerLink="/profile" routerLinkActive="active"><img class="profile-picture" src="assets/images/profile-picture.jpg"></a>
+        <!-- If the current page is a category page, show the logo with a different image -->     
+        <div class="logo-container" [ngSwitch]="currentCategory">
+            <a *ngSwitchCase="'literature'" routerLink="/main"><img class="logo-picture" src="assets/images/characters/literature-no-bg.png" alt="Literature Logo"></a>
+            <a *ngSwitchCase="'science'" routerLink="/main"><img class="logo-picture" src="assets/images/characters/science-no-bg.png" alt="Science Logo"></a>
+            <a *ngSwitchCase="'nature'" routerLink="/main"><img class="logo-picture" src="assets/images/characters/nature-no-bg.png" alt="Nature Logo"></a>
+            <a *ngSwitchDefault routerLink="/main"><img class="logo-picture" src="assets/images/chuOK-logo-no-bg.png" alt="Home Logo"></a>
+            
+            
+        </div>
+
     </div>
+
 </header>
+<nav class="nav-bar">
+    <!-- The navigation links are wrapped in a list for better styling and accessibility -->
+    <!-- Each link is a routerLink that navigates to a different route in the application -->
+    <ul class="nav-list">
+        <li class="nav-item">
+            <a routerLink="/home" id="home" #homeLink>Home</a>
+        </li>
+        <li class="nav-item">
+            <a routerLink="/literature" id="literature" #literatureLink>Literature</a>
+        </li>
+        <li class="nav-item">
+            <a routerLink="/science" id="science" #scienceLink>Science</a>
+        </li>
+        <li class="nav-item">
+            <a routerLink="/nature" id="nature" #natureLink>Nature</a>
+        </li>
+    </ul>
+    <div>
+        <!-- The profile picture is a link to the profile page -->
+        <a routerLink="/profile"><img class="profile-picture" src="assets/images/profile-picture-no-bg.png"></a>
+    </div>
+</nav>
