--- a/chuok-frontend/src/app/pages/main/main.component.css
+++ b/chuok-frontend/src/app/pages/main/main.component.css
@@ -2,9 +2,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 6rem;
+    font-size: 7rem;
     font-weight: 500; 
-    margin: 150px 0;
+    margin: 150px auto;
+    text-align: center;
 }
 
 .main-content {
@@ -20,27 +21,37 @@
 .main-content .main-content-panel-1 {
     grid-column: 1 / 2;
     grid-row: 1 / 4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border-radius: 1em 0 0 1em;
     padding: 10px;
-    background-color: #131212;
+    background-color: #403e3e;
+    
 }
 
 .main-content .main-content-panel-2 {
     grid-column: 2 / 3;
     grid-row: 1 / 3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border-radius: 0 1em 0 0;
     height: 350px;
     padding: 10px;
-    background-color: #178d13;
+    background-color: #3bb337;
 }
 
 .main-content .main-content-panel-3 {
     grid-column: 2 / 3;
     grid-row: 3 / 4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border-radius: 0 0 1em 0;
     height: 200px;
     padding: 10px;
-    background-color: #89138d;
+    background-color: #b939bd;
 }
 
 .review-section {
