--- a/chuok-frontend/src/app/components/footer/footer.component.css
+++ b/chuok-frontend/src/app/components/footer/footer.component.css
@@ -81,3 +81,29 @@
     padding: 10px 0;
     height: 50px;
 }
+
+@media (max-width: 750px) {
+    .footer {
+        grid-template-columns: 1fr;
+        grid-template-rows: auto auto auto;
+    }
+
+    .footer-social-media {
+        padding-top: 10px;
+        grid-column: 1 / 2;
+        grid-row: 1 / 2;
+    }
+
+    .footer-links {
+        grid-column: 1 / 2; 
+        grid-row: 2 / 3;
+        flex-direction: column;
+        align-items: center;
+        height: 500px;
+    }
+
+    .footer-copyright {
+        grid-column: 1 / 2;
+        grid-row: 3 / 4;
+    }
+}
