--- a/chuok-frontend/src/app/components/header-home/header-home.component.css
+++ b/chuok-frontend/src/app/components/header-home/header-home.component.css
@@ -21,40 +21,17 @@
     object-fit: contain;
 }
 
-.nav-toggle {
-    gap: 20px; /* Space between items */
-    margin-top: 20px;
-    margin-left: 5px;
-    padding: 10px;
-    background-color: #2b2b2b;
-    border-radius: 5em;
-    width: 10px; /* Fixed width */
-    height: 250px;
-    position: fixed;
-    z-index: 999;
-    transform: translateY(50%);
-}
-
-.nav-toggle:hover {
-    background-color: #424242;
-}
-
 .nav-bar {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 20px; /* Space between items */
+    gap: 30px; /* Space between items */
+    margin: auto;
     margin-top: 20px;
-    margin-left: 5px;
-    padding: 10px;
     background-color: #2b2b2b;
     border-radius: 5em;
-    width: fit-content; /* Fixed width */
+    width: 275px; /* Fixed width */
     /* width: 20%; */
-    position: fixed;
-    z-index: 99;
-    transform: translateY(50%);
 }
 
 .bounce-hover:hover {
