--- a/chuok-frontend/src/app/pages/home/home.component.html
+++ b/chuok-frontend/src/app/pages/home/home.component.html
@@ -1,1 +1,31 @@
-<p>home works!</p>
+<section>
+    <div>
+        <p class="greetings">
+            Hi,&nbsp;<span class="user-name">Neothefst</span>
+        </p>
+    </div>
+    <div class="catchphrase">
+        <p>What are you looking for doing today?</p>
+    </div>
+</section>
+<main>
+    <div class="sections">
+        <a href="/phrases-articles" class="articles-phrases" style="text-decoration: none; color: inherit;">
+            <div>
+            <p class="section-title">Phrases & Articles</p>
+            <p>Enjoy a break reading through lots of active entertainment.</p>
+            </div>
+        </a>
+        <a href="/adventure-mode" class="adventure-mode" style="text-decoration: none; color: inherit;">
+            <div>
+            <p class="section-title">Adventure Mode</p>
+            <p>Try your knowledge in this challenges. Can you beat them all?</p>
+            </div>
+        </a>
+    </div>
+</main>
+<section>
+    <div class="data">
+        <p>Your stats: </p>
+    </div>
+</section>
