--- a/chuok-frontend/src/app/pages/main/main.component.css
+++ b/chuok-frontend/src/app/pages/main/main.component.css
@@ -105,3 +105,53 @@
     background-color: #178d13;
     color: #fff;
 }
+
+@media (max-width: 768px) {
+    .main-message {
+        font-size: 4rem;
+    }
+
+    .main-content {
+        width: 90%;
+    }
+
+    .review-section .review-section-container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .review-section .review-section-container .review-section-card {
+        width: 80%;
+        height: auto;
+    }
+}
+
+@media (max-width: 480px) {
+    .main-message {
+        font-size: 3rem;
+        margin: 100px auto;
+    }
+
+    .main-content {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .main-content .main-content-panel-1,
+    .main-content .main-content-panel-2,
+    .main-content .main-content-panel-3 {
+        border-radius: 1em;
+        width: 100%;
+        height: 300px;
+        border-radius: 0;
+        /* Remove grid-specific properties if present */
+        grid-column: auto;
+        grid-row: auto;
+    }
+
+    .review-section .review-section-container .review-section-card {
+        width: 90%;
+        height: auto;
+    }
+}
