--- a/chuok-frontend/src/app/pages/adventure/adventure.component.html
+++ b/chuok-frontend/src/app/pages/adventure/adventure.component.html
@@ -8,19 +8,19 @@
 </section>
 <main>
     <div class="sections">
-        <a href="/phrases-articles" class="literature" style="text-decoration: none; color: inherit;">
+        <a href="/adventure/literature" class="literature" style="text-decoration: none; color: inherit;">
             <div>
             <p class="section-title">Literature</p>
             <p>Placeholder</p>
             </div>
         </a>
-        <a href="/adventure-mode" class="science" style="text-decoration: none; color: inherit;">
+        <a href="/adventure/science" class="science" style="text-decoration: none; color: inherit;">
             <div>
             <p class="section-title">Science</p>
             <p>Placeholder</p>
             </div>
         </a>
-            <a href="/adventure-mode" class="nature" style="text-decoration: none; color: inherit;">
+            <a href="/adventure/nature" class="nature" style="text-decoration: none; color: inherit;">
             <div>
             <p class="section-title">Nature</p>
             <p>Placeholder</p>
