--- a/chuok-frontend/src/app/pages/home/home.component.html
+++ b/chuok-frontend/src/app/pages/home/home.component.html
@@ -10,13 +10,13 @@
 </section>
 <main>
     <div class="sections">
-        <a href="/phrases-articles" class="articles-phrases" style="text-decoration: none; color: inherit;">
+        <a href="/library" class="articles-phrases" style="text-decoration: none; color: inherit;">
             <div>
             <p class="section-title">Phrases & Articles</p>
             <p>Enjoy a break reading through lots of active entertainment.</p>
             </div>
         </a>
-        <a href="/adventure-mode" class="adventure-mode" style="text-decoration: none; color: inherit;">
+        <a href="/adventure" class="adventure-mode" style="text-decoration: none; color: inherit;">
             <div>
             <p class="section-title">Adventure Mode</p>
             <p>Try your knowledge in this challenges. Can you beat them all?</p>
