--- a/chuok-frontend/src/app/pages/main/main.component.html
+++ b/chuok-frontend/src/app/pages/main/main.component.html
@@ -28,5 +28,5 @@
             <p>- User 3</p>
         </div>
     </div>
-    <button class="review-section-button">Load more</button>
+<button class="review-section-button">Load More</button>
 </section>
