--- a/chuok-frontend/src/app/pages/main/main.component.css
+++ b/chuok-frontend/src/app/pages/main/main.component.css
@@ -89,22 +89,46 @@
     margin-bottom: 10px;
 }
 
-.review-section .review-section-button {
-    background-color: #a0a0a0;
-    border: none;
-    border-radius: 0.5em;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    font-size: 1em;
-    margin: 0 auto;
+.review-section-button {
     width: 120px;
-    height: 30px;
+    padding: 10px 15px;
+    border: 2px solid #2c2c2c;
+    background-color: #1a1a1a;
+    color: #ffffff;
     cursor: pointer;
+    border-radius: 30px;
+    transition: all 0.4s ease;
+    outline: none;
+    position: relative;
+    overflow: hidden;
+    margin: 0 auto;
 }
 
-.review-section .review-section-button:hover {
-    background-color: #178d13;
-    color: #fff;
+.review-section-button::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: radial-gradient(
+    circle,
+    rgba(255, 255, 255, 0.25) 0%,
+    rgba(255, 255, 255, 0) 70%
+  );
+  transform: scale(0);
+  transition: transform 0.5s ease;
 }
+
+.review-section-button:hover::after {
+  transform: scale(4);
+}
+
+.review-section-button:hover {
+  border-color: #666666;
+  background: #292929;
+}
+
 
 @media (max-width: 768px) {
     .main-message {
