--- a/chuok-frontend/src/app/pages/adventure/adventure.component.html
+++ b/chuok-frontend/src/app/pages/adventure/adventure.component.html
@@ -3,7 +3,7 @@
         <p>It's adventure time!</p>
     </div>
     <div class="intro">
-        <p>Looking for inspiration? Maybe some time to disconnect? <br>Whatever your reason may be, here you have tons of contents to go trough. Don't be shy and take your time to explore all of them!</p>
+        <p>Looking for inspiration? Maybe some time to disconnect?<br>Whatever your reason may be, here you have tons of contents to go trough. Don't be shy and take your time to explore all of them!</p>
     </div>
 </section>
 <main>
@@ -11,19 +11,19 @@
         <a href="/adventure/literature" class="literature" style="text-decoration: none; color: inherit;">
             <div>
             <p class="section-title">Literature</p>
-            <p>Placeholder</p>
+            <p class="section-content">The world where everything is possible and creativity knows no bounds.</p>
             </div>
         </a>
         <a href="/adventure/science" class="science" style="text-decoration: none; color: inherit;">
             <div>
             <p class="section-title">Science</p>
-            <p>Placeholder</p>
+            <p class="section-content">Laws, theories, formulas... All human knowledge in one place!</p>
             </div>
         </a>
             <a href="/adventure/nature" class="nature" style="text-decoration: none; color: inherit;">
             <div>
             <p class="section-title">Nature</p>
-            <p>Placeholder</p>
+            <p class="section-content">Let's go explore the world outside!</p>
             </div>
         </a>
     </div>
