--- a/chuok-frontend/src/app/pages/main/main.component.html
+++ b/chuok-frontend/src/app/pages/main/main.component.html
@@ -1,15 +1,28 @@
 <div class="main-message">
-    <p >chuOK. Take a break</p>
+    <p>chuOK. Take a break</p>
 </div>
 <main class="main-content">
-    <div class="main-content-panel-1">
-        <p>Welcome to chuOK</p>
+    <div class="main-content-panel-1 unfold-panel">
+        <p class="panel-title">This is chuOK</p>
+        <div class="panel-content">
+            <p>A place where the impossible happens.</p>
+            <p>Entertainment and learning, together.</p>
+        </div>
     </div>
     <div class="main-content-panel-2">
-        <p>Features</p>
+        <p class="panel-title">Features</p>
+        <div class="panel-content">
+            <p>Tons of articles & phrases.</p>
+            <p>Thrilling adventure mode.</p>
+            <p>Fun and engaging games.</p>
+            <p>Interactive quizzes.</p>
+        </div>
     </div>
     <div class="main-content-panel-3">
-        <p>Motivational phrase</p>
+        <div class="panel-content">
+            <p>“Sometimes you have to slow down to appreciate all the things that are right in front of you.”</p>
+            <p>— Anonymous</p>
+        </div>
     </div>
 </main>
 <section class="review-section">
