--- a/chuok-frontend/src/app/components/header-main/header-main.component.html
+++ b/chuok-frontend/src/app/components/header-main/header-main.component.html
@@ -1,5 +1,5 @@
 <header class="header">
-    <a routerLink="/main"><img class="main-logo-picture" src="assets/images/chuOK-logo-no-bg.png" alt="Home Logo"></a>
+    <a routerLink="/main"><img class="main-logo-picture" src="assets/images/chuOK-logo.png" alt="Home Logo"></a>
 </header>
   <nav #navBar class="nav-bar" [class.open]="navOpen" (click)="toggleNav()">
   <ng-container *ngIf="navOpen">
@@ -9,7 +9,7 @@
     <a routerLink="/contact" class="bounce-hover" (click)="closeNav()">
       <img class="logo-picture" src="assets/images/pages/contact.png" alt="Contact">
     </a>
-    <a routerLink="/home" class="bounce-hover" (click)="closeNav()">
+    <a routerLink="/login" class="bounce-hover" (click)="closeNav()">
       <img class="logo-picture" src="assets/images/pages/profile.png" alt="Profile">
     </a>
   </ng-container>
