--- a/chuok-frontend/src/app/pages/about/about.component.html
+++ b/chuok-frontend/src/app/pages/about/about.component.html
@@ -1,1 +1,15 @@
-<p>about works!</p>
+<main class="main-content">
+    <section class="about-section">
+        <h1>What is ChuOK?</h1>
+        <p>chuOK is a web app where you can take a break from the stress, pressure and problems of work and daily life. It takes its name from the korean word 추억 (chu-ok), which means a (good) memory. As a software developer I have experimented the effects of burnout first-hand, and eventually I got to understand the importance of mental health in the development of a professional career. Thus, chuOK was born, a mixture of entertainment without giving up on learning something new in the process.</p>
+        <p>An entertaiment app, yet an educational one. How is that possible? chuOK offers what I like to call "active entertainment", where the user participates in its own entertainment. What I mean by that is that for every piece of information that you get, you are supposed to reflect on that, not just scroll down to the next thing.</p>
+        <p>Tons of challenges of various topics are waiting for you to learn something new every time you visit the app. Don't have the time today to think about answers? Just take a look at some articles or phrases that pick your interest and you will be good for the day. Remember that the goal here is disconnecting from the outside world for a few minutes; no daily streaks, no flash sales, no pressure!</p>
+        <p>The adventure mode is my personal favourite, different worlds that lead the user through several questions about a certain discipline. Complete all levels to get to the next world!</p>
+    </section>
+    <aside class="sidebar">
+        <img class="profile-picture" src="assets/images/social-media/github-icon.png" alt="profile picture">
+        <h2>About me</h2>
+        <p>I'm a software engineer with a passion for creating innovative and user-friendly applications. I believe in the power of technology to enhance our lives and make learning enjoyable.</p>
+        <p>In my free time, I enjoy exploring new technologies, reading books, and spending time with family and friends. I'm always looking for ways to improve my skills and contribute to the tech community.</p>
+    </aside>
+</main>
