--- a/chuok-frontend/src/app/pages/main/main.component.html
+++ b/chuok-frontend/src/app/pages/main/main.component.html
@@ -1,5 +1,5 @@
 <div class="main-message">
-    <p>chuOK. Take a break</p>
+    <p><span class="gradient-text">chuOK.</span> Take a break</p>
 </div>
 <main class="main-content">
     <div class="main-content-panel-1 unfold-panel">
